# PolimerBeton

./: .dockerignore  .env.dev.template  .env.prod.template  .env.template  .gitignore  .gitmodules  .htaccess  Dockerfile  apache.conf  build.mjs  docker-compose.prod.selinux.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  index.html  manage.py  package-lock.json  package.json  privacy.html  pyproject.toml  requirements.txt  sitemap.xml  style.css  style.scss  tsconfig.json  yandex_8f84557d37c05115.html
src/: Dockerfile  Dockerfile.prod  package-lock.json  package.json  pyproject.toml
src/apps/MainApp/: admin.py  apps.py  fields.py  models.py  runners.py  urls.py  utils.py  views.py
src/apps/MainApp/static/MainApp/scss/: _base.scss  _color_scheme.scss  _mixins.scss  _nav_menu.scss  _reset.scss  _vendors.scss  error.scss  index.scss  privacy.scss
src/apps/MainApp/static/MainApp/scss/sections/: _advantages.scss  _contacts.scss  _description.scss  _feedback_form.scss  _header.scss  _hero.scss  (+2 more)
src/apps/MainApp/static/MainApp/ts/: change_color_scheme.ts  change_offcanvas_scroll_state.ts  cookies_consent_banner_manager.ts  hero_image_loader.ts  update_hero_container_margin_top.ts  update_offcanvas_body_height.ts  update_offcanvas_padding_top.ts  vendors.ts
src/apps/MainApp/templates/MainApp/: success.html
src/apps/MainApp/templates/email/: message_template.html
src/apps/MainApp/templatetags/: livereload_tags.py
src/config/: urls.py
src/config/settings/: base.py  dev.py  prod.py
src/scripts/: entrypoint.prod.sh  entrypoint.sh
(+233 files in other folders)
