[project]
name = "polimerbeton"
version = "2.0.0"
description = "Landing site"
authors = [
    {name = "Vladimir Nikulin",email = "mail.jorey@gmail.com"}
]
license = {text = "No license"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-htmlmin (>=0.11.0,<0.12.0)",
    "django-compressor (>=4.5.1,<5.0.0)",
    "django-encrypted-model-fields (>=0.6.5,<0.7.0)",
    "babel (>=2.17.0,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-livereload-server (>=0.5.1,<0.6.0)",
    "django-libsass (>=0.9,<0.10)",
    "django-vite (>=3.1.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
